--- a/usuario.html
+++ b/usuario.html
@@ -130,7 +130,7 @@
     <h1>LOGIN</h1>
     <nav>
       <ul>
-        <li><a href="tasks.html">Página Inicial</a></li>
+        <li><a href="index.html">Página Inicial</a></li>
       </ul>
     </nav>
   </header>
