--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <link rel="stylesheet" href="tasks.css">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <meta name="viewport" content="height=device-height, initial-scale=1.0">
     <title>Tarefas</title>
 </head>
 <body >
